<resources>
    <string name="app_name">CRUDLivro</string>

    <string name="inicio">App Empréstimo de Livro</string>

    <string name="aluno"> Aluno</string>
    <string name="livro"> Livro</string>
    <string name="revista"> Revista</string>
    <string name="aluguel"> Aluguel</string>

    <string name="inserir">Inserir</string>
    <string name="excluir">Excluir</string>
    <string name="modificar">Modificar</string>
    <string name="listar">Listar</string>
    <string name="buscar">Buscar</string>

    <string name="dataRetirada">Data de Retirada</string>
    <string name="dataDevolucao">Data de Devolução</string>

    <string name="codigo">Codigo</string>
    <string name="qtdPaginas">Quantidade de Páginas</string>
    <string name="ISBN">ISBN</string>
    <string name="edicao">Edição</string>

    <string name="ISSN">ISSN</string>

    <!-- Aluno   -->
    <string name="id">ID</string>
    <string name="RA">RA</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>