<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivroFragment">

    <TextView
        android:id="@+id/tvListarLivro"
        android:layout_width="0dp"
        android:layout_height="148dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnListarLivro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toBottomOf="@+id/btnInserirLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnInserirLivro" />

    <Button
        android:id="@+id/btnExcluirLivro"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="25dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="@+id/btnModificarLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnModificarLivro" />

    <Button
        android:id="@+id/btnModificarLivro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="23dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarLivro"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnInserirLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="72dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toBottomOf="@+id/btnModificarLivro"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarLivro"
        app:layout_constraintStart_toStartOf="@+id/etEdicaoLivro"
        app:layout_constraintTop_toTopOf="@+id/etEdicaoLivro" />

    <EditText
        android:id="@+id/etIdLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarLivro"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarLivro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarLivro" />

    <EditText
        android:id="@+id/etEdicaoLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="323dp"
        android:ems="10"
        android:hint="@string/edicao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etQtdPaginasLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:hint="@string/qtdPaginas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etEdicaoLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarLivro" />

    <Button
        android:id="@+id/btnBuscarLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="29dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdLivro"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="36dp"
        android:scrollbars="vertical"
        android:text="@string/livro"
        app:layout_constraintEnd_toEndOf="@+id/etIdLivro"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nome"
        app:layout_constraintBottom_toBottomOf="@+id/etQtdPaginasLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdLivro"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etISBNLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/ISBN"
        android:inputType="text"
        android:text="@string/nome"
        app:layout_constraintBottom_toBottomOf="@+id/etEdicaoLivro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etQtdPaginasLivro" />
</androidx.constraintlayout.widget.ConstraintLayout>