<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RevistaFragment">

    <TextView
        android:id="@+id/tvListarRevista"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBuscarRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="22dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdRevista"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInserirRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="281dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarRevista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdRevista" />

    <Button
        android:id="@+id/btnModificarRevista"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirRevista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirRevista" />

    <Button
        android:id="@+id/btnExcluirRevista"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="27dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toTopOf="@+id/tvListarRevista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirRevista" />

    <Button
        android:id="@+id/btnListarRevista"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toBottomOf="@+id/btnExcluirRevista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnExcluirRevista" />

    <EditText
        android:id="@+id/etIdRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etNomeRevista"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarRevista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etQtdPaginasRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/qtdPaginas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloRevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:scrollbars="vertical"
        android:text="@string/livro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nome"
        app:layout_constraintBottom_toBottomOf="@+id/etQtdPaginasRevista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarRevista" />

    <EditText
        android:id="@+id/etISSNRevista"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/ISSN"
        android:inputType="text"
        android:text="@string/nome"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirRevista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etQtdPaginasRevista" />
</androidx.constraintlayout.widget.ConstraintLayout>